--- a/css/main.css
+++ b/css/main.css
@@ -1643,7 +1643,8 @@ h1 {
 @media screen and (max-width: 600px) {
   /* Estilos para pantallas pequeñas */
   h1 {
-    font-size: 1.2em;
+    line-height: 1;
+    font-size: 0.7em;
   }
 }
 
